<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:windowSoftInputMode="adjustResize">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFBB33"
        android:gravity="center"
        android:text="@string/new_group"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/row_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/new_group" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_title"
        android:layout_alignBottom="@+id/row_title"
        android:layout_alignParentLeft="true"
        android:text="@string/name_group"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/row_title"
        android:layout_marginTop="19dp"
        android:text="@string/current"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/current"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:hint="$"
        android:gravity="center"
        android:ems="10" >
    </EditText>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/current"
            android:layout_marginTop="16dp"
            android:background="#FFFFBB33"
            android:gravity="center"
            android:text="@string/subtitle1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/subtitle"
            android:text="@string/button_new" />

        <EditText
            android:id="@+id/new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_add"
            android:layout_alignBottom="@+id/button_add"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="@string/new_member"
            android:inputType="textPersonName" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_above="@+id/button_save"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_add" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/button_save" />

</RelativeLayout>